add login endpoint and request spec
