# config/routes.rb
@@ -3,5 +3,6 @@ Rails.application.routes.draw do
   mount Rswag::Api::Engine => '/api-docs', as: 'rswag_api'
   namespace :api do
     post '/register', to: 'authentication#register'
+    post '/login', to: 'authentication#login'
   end
 end
